--- a/en/_posts/2025-06-09-noofficefm-76.md
+++ b/en/_posts/2025-06-09-noofficefm-76.md
@@ -22,6 +22,10 @@ Is WhatsApp really a work tool — or just a fast track to chaos? How often do k
 
 [Full episode show notes at NOOFFICE.FM/76](https://nooffice.fm/76)
 
+## Watch trailer
+
+{% include videos.html id="IRP7LFvh5Yk" name="WhatsApp vs Nozbe" %}
+
 ## Subscribe "No Office FM":
 
 🟣 [Apple Podcasts](https://podcasts.apple.com/podcast/no-office/id1527466890)\\
