--- a/pl/_posts/2025-06-09-niemabiura-76.md
+++ b/pl/_posts/2025-06-09-niemabiura-76.md
@@ -22,6 +22,11 @@ Czy WhatsApp to narzędzie do pracy, czy przepis na chaos? Ile razy w Twojej fir
 
 [Notatki do odcinka na NIEMABIURA.PL/76](https://niemabiura.pl/76)
 
+## Zwiastun odcinka
+
+{% include videos.html id="mS8QecXdd9c" name="Whatsapp czy Nozbe" %}
+
+
 ## Subskrybuj "Nie Ma Biura"
 
 🟣 [Apple Podcasts](https://podcasts.apple.com/pl/podcast/nie-ma-biura/id1526795631)\\
