--- a/pl/_posts/2025-08-01-dziennik25.md
+++ b/pl/_posts/2025-08-01-dziennik25.md
@@ -130,6 +130,8 @@ Po otwarciu tego menu skrót przypomina Ci o wszystkim, co masz zaplanowane na d
 
 Po kliknięciu jednego z przedziałów czasowych wybieram, jak produktywnie spędziłem ten przedział czasowy: ✅ Praca w skupieniu, 🤝 Spotkanie, 📊 Płytka praca lub Brak pracy (zwykle po prostu zostawiam takie sloty puste).
 
+![{{ page.title }} Planowanie](/img/dziennik25-planowanie.jpg)
+
 Opcjonalnie zapisuję, co zrobiłem w tym przedziale czasowym (np. nagrywanie podcastu Nadgryzieni). Kiedy dzień się kończy i robię „Wieczorny Dziennik”, Skrót oblicza, ile 30-minutowych slotów spędziłem w każdym trybie i dodaje te statystyki do pliku mojego Dziennika.
 
 Dodatkowo dodaje je do pliku CSV (wartości rozdzielone przecinkami) o nazwie `2025-plan.csv` na wypadek, gdybym chciał je zaimportować do arkusza kalkulacyjnego i przeanalizować (co też raz na kwartał robię!).
