--- a/en/_posts/2025-06-25-nfm-77.md
+++ b/en/_posts/2025-06-25-nfm-77.md
@@ -1,6 +1,7 @@
 ---
 tags: [productivity]
 img: "nfm-77.jpg"
+l: https://www.linkedin.com/pulse/online-recruitment-nooffice-style-what-you-didnt-know-sliwinski-2tebf
 ---
 
 # Online Recruitment: What You Didn’t Know About Hiring Remotely
@@ -31,19 +32,19 @@ A few lessons from 18+ years of building a fully remote company at Nozbe — and
 
 ## ⚙️ Our Recruitment Process – Step by Step
 
-1. Detailed job description.\\
-2. CV + cover letter — are they customized or generic?\\
-3. Additional info via Google Form.\\
-4. Video interview with manager.\\
-5. Test task\\
+1. Detailed job description.
+2. CV + cover letter — are they customized or generic?
+3. Additional info via Google Form.
+4. Video interview with manager.
+5. Test task
 6. Job offer + talk with the CEO.
 
 ## 🧐 What We evaluate:
 
 👉 Skills, experience (CV)\\
 👉 Personalized cover letter\\
-👉 Written communication style
-👉 Engagement, responsiveness, proactivity
+👉 Written communication style\\
+👉 Engagement, responsiveness, proactivity\\
 👉 Online interview energy + value fit
 
 ## 🧐 Trust or Control?
