--- a/pl/_posts/2025-06-27-nadgryzieni-538.md
+++ b/pl/_posts/2025-06-27-nadgryzieni-538.md
@@ -15,7 +15,7 @@ Kompleksowy przewodnik po podróży do USA, oparty na moich doświadczeniach. Je
 ## Posłuchaj podcast w wersji audio:
 
 <audio controls>
-<source src="" type="audio/mpeg">
+<source src="https://media.blubrry.com/nadgryzieni/imagazine.stronazen.pl/nadgryzieni/Nadgryzieni-Odcinek-538.mp3" type="audio/mpeg">
 </audio>
 
 
