--- a/en/_posts/2025-08-18-podcast-219.md
+++ b/en/_posts/2025-08-18-podcast-219.md
@@ -4,7 +4,7 @@ img: "journal4-menu.jpg"
 podcast: 1012329770
 ---
 
-# The Podcast 219 - 219: Journaling or 5 minutes a day that will improve your life
+# The Podcast 219 - Journaling or 5 minutes a day that will improve your life
 
 This time the AI co-hosts are discussing my [new Journaling shortcut, version 4](/journal4) and the whole concept of journaling, why it should also matter to more people… potentially, should they dare to try it :-) 
 
