--- a/pl/_posts/2025-08-22-nadgryzieni-546.md
+++ b/pl/_posts/2025-08-22-nadgryzieni-546.md
@@ -18,9 +18,11 @@ Tym razem dołączyłem do chłopaków ze [Smart Moda](https://smart-mod.pl), cz
 <source src="https://media.blubrry.com/nadgryzieni/imagazine.stronazen.pl/nadgryzieni/Nadgryzieni-Odcinek-546.mp3" type="audio/mpeg">
 </audio>
 
+## Mój mobilny setup do podcastu dzisiaj
 
+![{{ page.title }} podcasting setup](/img/podcast-smartmod.jpg)
 
-[Notatki do odcinka na stronie iMagazine](DESC Tym razem dołączyłem do chłopaków ze [Smart Moda](https://smart-mod.pl), czyli domku modułowego firmy mojego brata Przemka, aby omówić kilka tematów bliskich mojemu sercu: rezygnację Wielkiej Brytanii z żądania „backdoor” w iCloud oraz kontrowersyjny unijny projekt Chat Control, czy CarPlay Ultra i miejsca gdzie może przestać działać. Omawiamy nowe telefony z serii Pixel 10, drogi aparat Ricoh GR IV, czy nową myszkę Logitech MX4 Master. Narzekamy na podwyżkę cen Disney+ i chwalę okulary Meta Ray-Ban, które uwielbiam a one także pomogły niewidomej osobie odzyskać pewność siebie. Kącik filmowy zdominował fenomen internetu, czyli KPop Demon Hunters.)
+[Notatki do odcinka na stronie iMagazine](https://imagazine.pl/2025/08/22/546-mamy-google-pixel-10-pro-nadgryzieni/)
 
 ## 🍎 Subskrybuj "Nadgryzionych"
 
