--- a/en/_posts/2025-06-24-kitchen.md
+++ b/en/_posts/2025-06-24-kitchen.md
@@ -1,5 +1,5 @@
 ---
-tags: [life,gadgets,ipadonly]
+tags: [gadgets,life,ipadonly]
 cover: "kitchen.jpg"
 m: https://social.nozbe.com/@michael/114743429645459185
 ---
