--- a/en/_posts/2025-09-04-list.md
+++ b/en/_posts/2025-09-04-list.md
@@ -19,7 +19,7 @@ Being busy with my [business](/nozbe) and just making it better, I'm kind of lat
 
 Before I tell the whole story, here's the result:
 
-**[Basic Empty To-Do List](/todo)**
+**🌎 [Basic Empty To-Do List](/todo)**
 
 The link above is simple to remember: `michael.team/todo`
 
@@ -31,7 +31,7 @@ If you don't want an empty to-do list, you can check out pre-defined to-do lists
 
 …or if you want send your own list of things to do to my "app" and check them off there, you can use this simple [Shortcut](/shortcuts):
 
-**[To-do list Shortcut][s]**
+**🔗 [To-do list Shortcut][s]**
 
 This Shortcut asks you for a list of things to do and then sends them over to my to-do app and then you can check things off.
 
@@ -154,7 +154,7 @@ That's it. That's the code, feel free to review it or improve it by submitting a
 
 If you speak Polish, I discuss this entire process on the podcast ["Nadgryzieni episode 547"](/pl/nadgryzieni-547/).
 
-{% include video.html id=XOfstwQmdfY %}
+{% include video.html id="XOfstwQmdfY" %}
 
 [s]: https://www.icloud.com/shortcuts/31d450b9c77145d8a610982a5d44d94c
 
