--- a/pl/_posts/2025-09-05-nadgryzieni-548.md
+++ b/pl/_posts/2025-09-05-nadgryzieni-548.md
@@ -18,7 +18,11 @@ Omawiamy nadchodzące produkty Apple, w tym rodziny iPhone 17, AirPods Pro 3, Ap
 <source src="https://media.blubrry.com/nadgryzieni/imagazine.stronazen.pl/nadgryzieni/Nadgryzieni-Odcinek-548.mp3" type="audio/mpeg">
 </audio>
 
+## Moje biuro u mamy znowu…
 
+Nowe ramie do mikrofonu i nowy mikrofon Shure MV6:
+
+![{{ page.title }} podcasting setup](/img/nadgryzieni-548.jpg)
 
 [Notatki do odcinka na stronie iMagazine](https://imagazine.pl/2025/09/05/548-iphone-17-air-i-pro-airpods-pro-3-co-jeszcze-pokaze-apple-nadgryzieni/)
 
