Update journal and now and more!

--- a/en/_posts/2025-05-13-journal4.md
+++ b/en/_posts/2025-05-13-journal4.md
@@ -180,6 +180,7 @@ The main translation file [in English is here](https://michael.team/txt/journal4
 
 I've been iterating on this Shortcut for weeks now and I'll be improving it. If you're curious how I got there, here are the most important milestones as I was re-writing it from scratch from [Journal 3](/journal3):
 
+- [4.42 - support for viewing Journal and language updates][j42]
 - [4.38 - public release version][j38]
 - 4.36 - tested pre-release version
 - 4.31 - added notifications
@@ -188,12 +189,12 @@ I've been iterating on this Shortcut for weeks now and I'll be improving it. If 
 - 4.24 - new ID and planning to CSV
 - 4.23 - fix New Year
 - 4.22 - setup
-- 4.20 - photo fixes 
+- 4.20 - photo fixes
 - 4.19 - planning
 - 4.18 - morning done
-- 4.16 - goals update 
+- 4.16 - goals update
 - 4.15 - photo as function + menu option to regenerate 
-- 4.13 - evening works + adding  + reset
+- 4.13 - evening works + adding + reset
 
 As I keep improving the Shortcut I will try to post new versions here.
 
@@ -201,9 +202,10 @@ As I keep improving the Shortcut I will try to post new versions here.
 
 I hope you'll find my [new Journal 4 Shortcut][j] useful and I challenge you to start journaling and let me know [on social media](/contact) how it's going for you!
 
-[j]: https://www.icloud.com/shortcuts/23704c3c59bd48789222d219193624ce
 
 [j38]: https://www.icloud.com/shortcuts/23704c3c59bd48789222d219193624ce
+[j42]: https://www.icloud.com/shortcuts/86dbf93e2258411b82944a4c3f7145c9
 
+[j]: https://www.icloud.com/shortcuts/86dbf93e2258411b82944a4c3f7145c9
 [n]: https://michael.gratis/nozbe
 [np]: https://michael.gratis/nozbepersonal
