--- a/en/_posts/2025-05-13-journal4.md
+++ b/en/_posts/2025-05-13-journal4.md
@@ -148,6 +148,8 @@ Again, an optional thing. When you want to (and I do!), you can re-connect with 
 
 Many people swear by it, that repeating, re-reading and re-connecting with your goals regularly helps you stay focused.
 
+*Update Sep 30, 2025 - this menu has been moved to new "Settings" menu in version 4.45.*
+
 ### 7. Open Journal file
 
 This menu option opens your Journal file in your default text editor. I recommend free [Runestone](https://runestone.app) or paid [Textastic](https://www.textasticapp.com) for editing [Markdown text files](/markdown). I use both of these apps.
@@ -158,9 +160,21 @@ Every time I launch the "Evening Journal" menu it not only writes the journal en
 
 As you can see, I'm not stressing about anything here. If I want to skip a day, I can. If I don't want to do planning, I don't have to. If I don't want to answer a question, I just skip it, too. Low friction.
 
+*Update Sep 30, 2025 - this menu has been moved to new "Settings" menu in version 4.45.*
+
 ### 9. Version history and updates!
 
 The last menu option is the version of the Shortcut. I've made screenshots with the version `4.36`, but the one I'm publishing today is `4.38`. I'll be improving the Shortcut as I go. When you click on this option, the Shortcut will check online on my blog if there is a new version and prompt you to visit this post and [download the latest version][j].
+
+### 10. New in version 4.45 - Settings!
+
+With the introduction of the version 4.45 I've simplifed the main menu and moved "Goals" and "Change Date" to settings. Now the new main menu of the Journal shortcut looks like this:
+
+![{{ page.title }} simplified menu](/img/journal4-simple.jpg)
+
+When you tap on it, you'll be able to access the above-mentioned otpions plus two additional ones that let you define which Shortcut to run AFTER you've done your Morning or Evening journaling practice. I find it especially helpful in the morning as I want to do a [mornig Bible reading](/pl/czytanie/) right after I do my gratitude journal:
+
+![{{ page.title }} settings](/img/journal4-settings.jpg)
 
 ## Journal Shortcut is free and you can modify it, too!
 
@@ -180,7 +194,8 @@ The main translation file [in English is here](https://michael.team/txt/journal4
 
 I've been iterating on this Shortcut for weeks now and I'll be improving it. If you're curious how I got there, here are the most important milestones as I was re-writing it from scratch from [Journal 3](/journal3):
 
-- [4.42 - support for viewing Journal and language updates][j42]
+- [4.45 - new Settings with Shortcuts after journaling][j45]
+- [4.42 - viewing Journal and language updating][j42]
 - [4.38 - public release version][j38]
 - 4.36 - tested pre-release version
 - 4.31 - added notifications
@@ -205,7 +220,8 @@ I hope you'll find my [new Journal 4 Shortcut][j] useful and I challenge you to 
 
 [j38]: https://www.icloud.com/shortcuts/23704c3c59bd48789222d219193624ce
 [j42]: https://www.icloud.com/shortcuts/86dbf93e2258411b82944a4c3f7145c9
+[j45]: https://www.icloud.com/shortcuts/a47e0b470fea41f390570543c83bab7b
 
-[j]: https://www.icloud.com/shortcuts/86dbf93e2258411b82944a4c3f7145c9
+[j]: https://www.icloud.com/shortcuts/a47e0b470fea41f390570543c83bab7b
 [n]: https://michael.gratis/nozbe
 [np]: https://michael.gratis/nozbepersonal
