--- a/en/_posts/2025-10-08-air.md
+++ b/en/_posts/2025-10-08-air.md
@@ -29,7 +29,7 @@ My mind is still blown that my current iPad Pro is still the thinnest Apple devi
 
 ![{{ page.title }} ipad](/img/air-ipad.jpg)
 
-As I mentioned in my [M4 iPad Pro review](/ipadm4), the *thinness changes the device** - and quite similar logic applies here. The iPhone Air's thinness makes a new thing possible:
+As I mentioned in my [M4 iPad Pro review](/ipadm4), the **thinness changes the device** - and quite similar logic applies here. The iPhone Air's thinness makes a new thing possible:
 
 > With iPhone Air I can have a bigger screen while having a smaller and lighter phone!
 
@@ -91,7 +91,7 @@ I've watched drop tests online. I know the new iPhone Air is very sturdy thanks 
 
 However, I notice that when I use it without a case, it's more slippery and as I have really small hands, I tend to worry that the phone might fall. Whereas if I use it in this super thin Pitaka case, I'm completely worry-free. I use the phone like if I don't care about it.
 
-![{{ page.title }} case](/img/air-case.jpg)
+![{{ page.title }} case](/img/air-new.jpg)
 
 With this super thin case the phone is only slightly bulkier, I can still appreciate the titanium sides with all the buttons and the bottom of the phone exposed. As you can also see on the photos above, even in this case, it's still thinner than anything else. By a mile.
 
@@ -120,8 +120,6 @@ However, after all was done I didn't have to fiddle too much with the iPhone. Ye
 ## iPhone Air is the future. Now.
 
 That's my final conclusion. After just few days with this device  I'm in love with it. This is the iPhone for me. Not because it's flashy but because it really is the future of a smartphone.
-
-![{{ page.title }} new](/img/air-new.jpg)
 
 It's glorious and I'm happy I get to use it as my main iPhone now!
 
