podcast updates, json post and usbc

--- a/en/_posts/2024-10-21-noofficefm-51.md
+++ b/en/_posts/2024-10-21-noofficefm-51.md
@@ -1,5 +1,5 @@
 ---
-tags: [noofficefm,video]
+tags: [noofficefm]
 vid: "fgUcjH2leCw"
 podcast: 1527466890
 m: https://social.nozbe.com/@michael/113346600032028777
