--- a/en/_posts/2025-04-01-noofficefm-72.md
+++ b/en/_posts/2025-04-01-noofficefm-72.md
@@ -1,5 +1,5 @@
 ---
-tags: [noofficefm,video]
+tags: [noofficefm]
 vid: "JORV7A0S_do"
 podcast: 1527466890
 m: https://social.nozbe.com/@michael/114313688191582874
