--- a/en/_posts/2025-07-30-usbc.md
+++ b/en/_posts/2025-07-30-usbc.md
@@ -4,7 +4,7 @@ cover: "usbc.jpg"
 social: "usbc.jpg"
 ---
 
-# USB-C all things! Trimmer? Lamp? Glasses?… or why companies should finally drop their own chargers!
+# USB-C all things! Trimmer? Lamp? Glasses? Batteries?… or why companies should finally drop their own chargers!
 
 For the last two years my most important daily devices have had USB-C ports: [iPhone](/iphone15ultra) and [iPad](/ipadm4/)… and gradually I've been migrating from gadgets that require ports like Lightning or micro-USB… I'm now fast-charging the [Watch](/ultra) using it's dedicated USB-C cable (which I'm also using to charge my [AirPods](/airpodspro/))… and as I've been enjoying this USB-C lifestyle, I started looking at other appliances that don't have old-school dedicated chargers but are using USB-C instead! Here are my latest discoveries:
 
@@ -28,6 +28,12 @@ We've found this lamp (see picture above) in a Dollar store and it's a great lam
 ## USB-C glasses?
 
 I've been using many different smart [sunglasses](/sunglasses/) and all charge using USB-C. See the photo above of my latest cycling glasses with Bluetooth speakers. Great!
+
+## USB-C AA and AAA Batteries?
+
+When I saw [MKBHD's short video](https://www.youtube.com/shorts/acaAW3p5Tqw) I had to get them and now they are here and these rechargable batteries are glorious. Now I can re-charge them anytime I want with my [iPhone](/iphone) charger!
+
+![{{ page.title }} batteries](/img/usbc-batteries.jpg)
 
 ## Better USB-C charger?
 
