--- a/en/_posts/2023-06-23-noofficefm-45.md
+++ b/en/_posts/2023-06-23-noofficefm-45.md
@@ -1,5 +1,5 @@
 ---
-tags: [noofficefm,video]
+tags: [noofficefm]
 vid: "NYNQLPERrGs"
 podcast: 1527466890
 m: https://social.nozbe.com/@michael/110594394921677494
