--- a/en/_posts/2024-07-10-noofficefm-47.md
+++ b/en/_posts/2024-07-10-noofficefm-47.md
@@ -1,5 +1,5 @@
 ---
-tags: [noofficefm,video]
+tags: [noofficefm]
 vid: "x31lJz0gDVk"
 podcast: 1527466890
 m: https://social.nozbe.com/@michael/112767282800862533
