--- a/en/_posts/2024-09-09-noofficefm-48.md
+++ b/en/_posts/2024-09-09-noofficefm-48.md
@@ -1,5 +1,5 @@
 ---
-tags: [noofficefm,video]
+tags: [noofficefm]
 vid: "6aIU6ZPpan4"
 podcast: 1527466890
 m: https://social.nozbe.com/@michael/113112683782885398
