--- a/en/_posts/2024-09-23-noofficefm-49.md
+++ b/en/_posts/2024-09-23-noofficefm-49.md
@@ -1,5 +1,5 @@
 ---
-tags: [noofficefm,video]
+tags: [noofficefm]
 vid: "DLV3tUi-3KY"
 podcast: 1527466890
 m: https://social.nozbe.com/@michael/113191956030214368
