--- a/en/_posts/2024-12-09-noofficefm-54.md
+++ b/en/_posts/2024-12-09-noofficefm-54.md
@@ -1,5 +1,5 @@
 ---
-tags: [noofficefm,video]
+tags: [noofficefm]
 vid: "pUzDa8v_7II"
 podcast: 1527466890
 m: https://social.nozbe.com/@michael/113624289160625373
