--- a/en/_posts/2025-03-17-noofficefm-71.md
+++ b/en/_posts/2025-03-17-noofficefm-71.md
@@ -1,5 +1,5 @@
 ---
-tags: [noofficefm,video]
+tags: [noofficefm]
 vid: "EVmdWGUodjQ"
 podcast: 1527466890
 m: https://social.nozbe.com/@michael/114179903415073335
