--- a/en/_posts/2025-05-12-noofficefm-74.md
+++ b/en/_posts/2025-05-12-noofficefm-74.md
@@ -1,5 +1,5 @@
 ---
-tags: [noofficefm,video]
+tags: [noofficefm]
 vid: "b9o2-V5fXX0"
 podcast: 1527466890
 m: https://social.nozbe.com/@michael/114513744580718120
