--- a/en/_posts/2025-05-26-noofficefm-75.md
+++ b/en/_posts/2025-05-26-noofficefm-75.md
@@ -1,5 +1,5 @@
 ---
-tags: [noofficefm,video]
+tags: [noofficefm]
 vid: "QOOG6N8rJas"
 podcast: 1527466890
 m: https://social.nozbe.com/@michael/114590547243499822
