--- a/en/_posts/2025-11-20-10books.md
+++ b/en/_posts/2025-11-20-10books.md
@@ -1,5 +1,5 @@
 ---
-tags: [booksbooks,featured]
+tags: [books,featured]
 cover: "10books.jpg"
 ---
 
@@ -54,7 +54,7 @@ The GTD methodology centers around five key steps:
 1. **Capture:** Collect everything that requires attention in a trusted system (inboxes, notes, apps).
 2. **Clarify:** Determine if each item is actionable. If yes, define the next actionable step. If it takes less than two minutes, do it immediately (the famous Two-Minute Rule).
 3. **Organize:** Sort tasks into projects. Everything that takes several steps is a project. Optionally assign contexts to tasks. Put time-sensitive tasks in your calendar.
-4. **Reflect:** Regularly review all lists and projects. This is the main inspiration for our [Fridays at Nozbe](https://nozbe.com/friday)?c=michaelteam) where we have dedicated time for a Weekly Review.
+4. **Reflect:** Regularly review all lists and projects. This is the main inspiration for our [Fridays at Nozbe](https://nozbe.com/friday/?c=michaelteam) where we have dedicated time for a Weekly Review.
 5. **Engage:** Use your organized system to decide what to work on in the moment based on context, time, energy, and priorities.
 
 When I started building [Nozbe][n] I focused on making it super easy to add tasks to the system, to organize them in projects and to easily mark with a star my *next actions?*. I loved asking myself: *What's the next physical action that moves this project forward?*.
@@ -107,7 +107,7 @@ Just like in *Deep Work* I learned that I need to make time for my focused work,
 
 📕 Get Gary Keller and Jay Papasan's *One Thing* on [Amazon][am4] or [Audible][au4].
 
-[am4]: https://www.amazon.com/dp/B0F5NJX139?tag=sliwinski-20
+[am4]: https://www.amazon.com/dp/B00FPVS27W?tag=sliwinski-20
 [au4]: https://www.audible.com/pd/B00FPMTCGQ?tag=sliwinski-20
 
 💬 Discuss this book on [Mastodon](https://social.nozbe.com/@michael/115581768313006317) or [LinkedIn].
@@ -179,7 +179,7 @@ Additional takeaways:
 
 It is less about massive change and more about building powerful systems that make positive behaviors natural, automatic, and sustainable — one tiny improvement at a time.
 
-📕 Get James Clear's *Atomic Habits* on [Amazon][am7] or [Audible][au7])
+📕 Get James Clear's *Atomic Habits* on [Amazon][am7] or [Audible][au7].
 
 [am7]: https://www.amazon.com/dp/1847941842?tag=sliwinski-20
 [au7]: https://www.audible.com/pd/1524779261?tag=sliwinski-20
@@ -206,7 +206,7 @@ We liked this book so much that we discussed it also [on the episode 201 of The 
 
 📕 Get Mark Manson's *Subtle Art of Not Giving a Fuck* on [Amazon][am8] or [Audible][au8].
 
-[am8]: https://www.amazon.com/dp/0063228254?tag=sliwinski-20
+[am8]: https://www.amazon.com/dp/B01I29Y344?tag=sliwinski-20
 [au8]: https://www.audible.com/pd/B01I28NFEE?tag=sliwinski-20
 
 💬 Discuss this book on [Mastodon] or [LinkedIn].
