kindle, nadgryzieni i promo

--- a/en/_posts/2025-11-20-10books.md
+++ b/en/_posts/2025-11-20-10books.md
@@ -37,7 +37,7 @@ Overall, this book introduced me to productivity and inspired me to keep trying 
 [am1]: https://www.amazon.com/dp/1982137274?tag=sliwinski-20
 [au1]: https://www.audible.com/pd/B002V5HAL4?tag=sliwinski-20
 
-💬 Discuss this book on [Mastodon](https://social.nozbe.com/@michael/115576669010325679) or [LinkedIn].
+💬 Discuss this book on [Mastodon](https://social.nozbe.com/@michael/115576669010325679) or [LinkedIn](https://www.linkedin.com/posts/michaelsliwinski_nooffice-activity-7397283934792880129-OgEs).
 
 ## Book 2 - David Allen's *Getting Things Done*
 
