--- a/en/_posts/2025-11-20-10books.md
+++ b/en/_posts/2025-11-20-10books.md
@@ -66,7 +66,7 @@ One year after launching Nozbe I had a pleasure of meeting the author, David All
 [am2]: https://www.amazon.com/dp/0143126563?tag=sliwinski-20
 [au2]: https://www.audible.com/pd/B0DSK1YKYZ?tag=sliwinski-20
 
-💬 Discuss this book on [Mastodon](https://social.nozbe.com/@michael/115577203818290108) or [LinkedIn].
+💬 Discuss this book on [Mastodon](https://social.nozbe.com/@michael/115577203818290108) or [LinkedIn](https://www.linkedin.com/posts/michaelsliwinski_nooffice-activity-7397635021756526592-Yt2z).
 
 ## Book 3 - Cal Newport's *Deep Work*
 
@@ -184,7 +184,7 @@ It is less about massive change and more about building powerful systems that ma
 [am7]: https://www.amazon.com/dp/1847941842?tag=sliwinski-20
 [au7]: https://www.audible.com/pd/1524779261?tag=sliwinski-20
 
-💬 Discuss this book on [Mastodon] or [LinkedIn].
+💬 Discuss this book on [Mastodon](https://social.nozbe.com/@michael/115582622649988589) or [LinkedIn].
 
 ## Book 8 - Mark Manson's *Subtle Art of Not Giving a Fuck*
 
@@ -209,7 +209,7 @@ We liked this book so much that we discussed it also [on the episode 201 of The 
 [am8]: https://www.amazon.com/dp/B01I29Y344?tag=sliwinski-20
 [au8]: https://www.audible.com/pd/B01I28NFEE?tag=sliwinski-20
 
-💬 Discuss this book on [Mastodon] or [LinkedIn].
+💬 Discuss this book on [Mastodon](https://social.nozbe.com/@michael/115586846462447814) or [LinkedIn].
 
 ## Book 9 - Michael  Gerber's *The E‑Myth*
 
@@ -238,7 +238,7 @@ The book forces you to think of your business like designing a franchise. This m
 [am9]: https://www.amazon.com/dp/0887307280?tag=sliwinski-20
 [au9]: https://www.audible.com/pd/B002V1LGZE?tag=sliwinski-20
 
-💬 Discuss this book on [Mastodon] or [LinkedIn].
+💬 Discuss this book on [Mastodon](https://social.nozbe.com/@michael/115587574469576523) or [LinkedIn].
 
 ## Book 10 - my very own *10 Steps to Ultimate Productivity*
 
@@ -260,7 +260,7 @@ Back in 2018 I wrote my very own book inspired by all the books above and my own
 
 📕 You can get my book here for free at **[nozbe.com/10steps](https://nozbe.com/10steps/?c=michaelteam)**.
 
-💬 Discuss this book on [Mastodon] or [LinkedIn].
+💬 Discuss this book on [Mastodon](https://social.nozbe.com/@michael/115588319377986695) or [LinkedIn].
 
 ## These are my top 10 books of all time - what are yours?
 
