--- a/en/_posts/2025-11-21-kindle.md
+++ b/en/_posts/2025-11-21-kindle.md
@@ -1,9 +1,10 @@
 ---
 tags: [productivity,short]
 img: "kindle.jpg"
+m: https://social.nozbe.com/@michael/115587029208058402
 ---
 
-# Kindle before bed instead of the iPhone
+# Kindle before bed instead of iPhone
 
 I've recently had trouble falling asleep. 😴 On average I'm sleeping fewer hours than last year. So I decided to fix my "good night" routine by getting rid of my [iPhone](/iphone) for the night and changing it for a [book read](/books) on a [Kindle][k] - here's why…
 
