--- a/en/_posts/2025-11-20-10books.md
+++ b/en/_posts/2025-11-20-10books.md
@@ -94,7 +94,7 @@ BTW, I also discussed this book with my-co host Radek [on the episode 46 of The 
 [am3]: https://www.amazon.com/dp/0349413681?tag=sliwinski-20
 [au3]: https://www.audible.com/pd/B01CYKTYNW?tag=sliwinski-20
 
-💬 Discuss this book on [Mastodon](https://social.nozbe.com/@michael/115581111015897575) or [LinkedIn].
+💬 Discuss this book on [Mastodon](https://social.nozbe.com/@michael/115581111015897575) or [LinkedIn](https://www.linkedin.com/posts/michaelsliwinski_how-to-focus-in-a-world-full-of-distractions-activity-7399100275602391042-Ns9w).
 
 ## Book 4 - Gary Keller and Jay Papasan's *One Thing*
 
