--- a/en/_posts/2025-11-26-usbc25.md
+++ b/en/_posts/2025-11-26-usbc25.md
@@ -18,7 +18,7 @@ In one of my earlier blog posts I mentioned that now I'm striving to get [USB-C 
 
 Most people don't know these things exist. But they do. And they are awesome. I'm gradually changing all my previous Ni-MH rechargeable batteries to these ones.
 
-![{{ page.title }} aa](/img/usbc25-aa.jpg)
+![{{ page.title }} aa](/img/usbc25-aaa.jpg)
 
 Not only do they add USB-C charging, but they are also much modern using Li-ion and NOT Ni-MH technology. They come with this cute 4-in-1 USB-C charging cable and they can quickly recharged. I will only be buying these batteries from now on. Hare are links to some of the popular [AA batteries](https://amzn.to/44nVxOD) and [AAA ones](https://amzn.to/3JVon22).
 
@@ -62,7 +62,7 @@ Whenever we travel as a family, we must carry at least one Bluetooth speaker and
 
 ## LOGITECH MX Anywhere 3s mouse
 
-I love this small but powerful mouse. It works great for both right and left handed people. And even though I'm right-handed I learned to use my mouse with left hand and I have the Apple's trackpad on the right side of my keyboard. I bought two of these mice - a [black one for myself](https://amzn.to/3Km7HRl) and a [rose for my wife](https://amzn.to/4ptqEAz).
+I love this small but powerful mouse. It works great for both right and left handed people. And even though I'm right-handed [I learned to use my mouse with left hand](/mouse/) and I have the Apple's trackpad on the right side of my keyboard. I bought two of these mice - a [black one for myself](https://amzn.to/3Km7HRl) and a [rose for my wife](https://amzn.to/4ptqEAz).
 
 ![{{ page.title }} logi](/img/usbc25-logi.jpg)
 
