--- a/en/_posts/2025-11-20-10books.md
+++ b/en/_posts/2025-11-20-10books.md
@@ -112,7 +112,7 @@ Just like in *Deep Work* I learned that I need to make time for my focused work,
 [am4]: https://www.amazon.com/dp/B00FPVS27W?tag=sliwinski-20
 [au4]: https://www.audible.com/pd/B00FPMTCGQ?tag=sliwinski-20
 
-💬 Discuss this book on [Mastodon](https://social.nozbe.com/@michael/115581768313006317) or [LinkedIn].
+💬 Discuss this book on [Mastodon](https://social.nozbe.com/@michael/115581768313006317) or [LinkedIn](https://www.linkedin.com/posts/michaelsliwinski_i-had-too-many-priorities-and-to-many-activity-7399809433364729856-H2sb).
 
 ## Book 5 - Derek Sivers' *Hell Yeah or No*
 
@@ -132,7 +132,7 @@ I love Derek Sivers. My web site is inspired by his web site. I even have a ["No
 
 📕 You can buy this book directly from [Derek's online book store](https://sivers.com).
 
-💬 Discuss this book on [Mastodon](https://social.nozbe.com/@michael/115581847371776695) or [LinkedIn].
+💬 Discuss this book on [Mastodon](https://social.nozbe.com/@michael/115581847371776695) or [LinkedIn](https://www.linkedin.com/posts/michaelsliwinski_i-found-myself-saying-yes-to-too-many-things-activity-7401266493159673858-Qh-b).
 
 ## Book 6 - Greg McKeown's *Essentialism*
 
@@ -152,7 +152,7 @@ Radek and I discussed this book at length also [on the episode #112 of The Podca
 [am6]: https://www.amazon.com/dp/0804137404?tag=sliwinski-20
 [au6]: https://www.audible.com/pd/B00IWZ6XGA?tag=sliwinski-20
 
-💬 Discuss this book on [Mastodon](https://social.nozbe.com/@michael/115581960922390124) or [LinkedIn].
+💬 Discuss this book on [Mastodon](https://social.nozbe.com/@michael/115581960922390124) or [LinkedIn](https://www.linkedin.com/posts/michaelsliwinski_i-hate-this-book-because-its-so-good-activity-7401628855934795776-6Boh).
 
 ## Book 7 - James Clear's *Atomic Habits*
 
@@ -186,7 +186,7 @@ It is less about massive change and more about building powerful systems that ma
 [am7]: https://www.amazon.com/dp/1847941842?tag=sliwinski-20
 [au7]: https://www.audible.com/pd/1524779261?tag=sliwinski-20
 
-💬 Discuss this book on [Mastodon](https://social.nozbe.com/@michael/115582622649988589) or [LinkedIn].
+💬 Discuss this book on [Mastodon](https://social.nozbe.com/@michael/115582622649988589) or [LinkedIn](https://www.linkedin.com/posts/michaelsliwinski_most-of-the-days-i-dont-rely-on-my-creative-activity-7401991228059287552-lUKn).
 
 ## Book 8 - Mark Manson's *Subtle Art of Not Giving a Fuck*
 
@@ -211,7 +211,7 @@ We liked this book so much that we discussed it also [on the episode 201 of The 
 [am8]: https://www.amazon.com/dp/B01I29Y344?tag=sliwinski-20
 [au8]: https://www.audible.com/pd/B01I28NFEE?tag=sliwinski-20
 
-💬 Discuss this book on [Mastodon](https://social.nozbe.com/@michael/115586846462447814) or [LinkedIn].
+💬 Discuss this book on [Mastodon](https://social.nozbe.com/@michael/115586846462447814) or [LinkedIn](https://www.linkedin.com/posts/michaelsliwinski_im-an-emotional-person-i-care-too-much-activity-7402344778954178561-dVS6).
 
 ## Book 9 - Michael  Gerber's *The E‑Myth*
 
@@ -240,7 +240,7 @@ The book forces you to think of your business like designing a franchise. This m
 [am9]: https://www.amazon.com/dp/0887307280?tag=sliwinski-20
 [au9]: https://www.audible.com/pd/B002V1LGZE?tag=sliwinski-20
 
-💬 Discuss this book on [Mastodon](https://social.nozbe.com/@michael/115587574469576523) or [LinkedIn].
+💬 Discuss this book on [Mastodon](https://social.nozbe.com/@michael/115587574469576523) or [LinkedIn](https://www.linkedin.com/posts/michaelsliwinski_as-a-small-business-owner-i-found-myself-activity-7403811145511325696-FZXv).
 
 ## Book 10 - my very own *10 Steps to Ultimate Productivity*
 
