core plus cuts updates

--- a/en/_posts/2025-11-20-10books.md
+++ b/en/_posts/2025-11-20-10books.md
@@ -262,7 +262,7 @@ Back in 2018 I wrote my very own book inspired by all the books above and my own
 
 📕 You can get my book here for free at **[nozbe.com/10steps](https://nozbe.com/10steps/?c=michaelteam)**.
 
-💬 Discuss this book on [Mastodon](https://social.nozbe.com/@michael/115588319377986695) or [LinkedIn].
+💬 Discuss this book on [Mastodon](https://social.nozbe.com/@michael/115588319377986695) or [LinkedIn](https://www.linkedin.com/posts/michaelsliwinski_back-in-2018-i-wrote-my-very-own-book-activity-7404535942109167616-J0NK).
 
 ## These are my top 10 books of all time - what are yours?
 
