--- a/en/_posts/2025-12-18-core.md
+++ b/en/_posts/2025-12-18-core.md
@@ -71,7 +71,7 @@ For CORE HOURS concept Friday means I've got the time to also review what I've d
 
 Every Friday it's time for a new decision. Sometimes I want to continue with the same thing next week, but usually I just want to take a break and work on something different for a change. Either way, it's important to write down the key takeaways and conclusions after each week. To basically journal what I've found, what I started, what I finished or what I still don't know. This way when I need to pick up this idea in the future, I'll be able to quickly catch up and keep advancing.
 
-![{{ page.title }}](/img/godziny.jpg)
+![{{ page.title }}](/img/now250926.jpg)
 
 ## CORE HOURS = work on 1 idea for 2 hours per day and change the world!
 
