--- a/en/_posts/2025-11-26-usbc25.md
+++ b/en/_posts/2025-11-26-usbc25.md
@@ -1,5 +1,5 @@
 ---
-tags: [gadgetsgadgets,featured]
+tags: [gadgets,imagazine,featured]
 cover: "usbc25.jpg"
 m: https://social.nozbe.com/@michael/115618243062398506
 l: https://www.linkedin.com/pulse/my-favorite-usb-c-gadgets-2025-what-yours-michael-sliwinski-mfmbf
