--- a/en/_posts/2025-11-20-10books.md
+++ b/en/_posts/2025-11-20-10books.md
@@ -1,5 +1,5 @@
 ---
-tags: [books,featured]
+tags: [books,imagazine,featured]
 cover: "10books.jpg"
 l: https://www.linkedin.com/pulse/newsletter-back-10-books-changed-my-life-michael-sliwinski-hbmcf
 m: https://social.nozbe.com/@michael/115621349498077293
