--- a/en/_posts/2025-12-18-core.md
+++ b/en/_posts/2025-12-18-core.md
@@ -1,5 +1,5 @@
 ---
-tags: [productivity,featured]
+tags: [productivity,imagazine,featured]
 cover: "core.jpg"
 social: "core.jpg"
 l: https://www.linkedin.com/pulse/can-you-change-world-2-hours-day-michael-sliwinski-bunae
